--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -68,14 +68,15 @@
   
 .home__rating__1 {
   text-align: left;
-  width: 17%;
-  padding: 0 5px 0 0;
+  width: auto;
 }
 
 .home__rating__2 {
   color: $main-color;
   font-size: 20px;
   text-align: left;
+  width: auto;
+  margin: 0 0 0 10px;
 
   h4 {
     margin: 17px 0 0 0;
@@ -85,7 +86,8 @@
 .home__rating__11 {
   font-size: 17px;
   margin: 40px 0 0 30px;
-  width: 17%;
+  width: auto;
+  text-align: left;
 }
     
 .home__rating__22 {
@@ -93,6 +95,7 @@
   font-size: 20px;
   margin: 45px 0 0 10px;
   text-align: left;
+  width: auto;
 
   h4 {
     margin: 17px 0 0 0;
@@ -113,8 +116,8 @@
 }
 
 .home__popular {
-  // margin: 40px 0 0 0;
   width: 30%;
+  margin: 0 0 0 70px;
   
   img {
     width: 110%;
@@ -125,60 +128,12 @@
 
 /* media */
 
-@media (max-width: 1500px) {
+@media (max-width: 991px) {
+  .el__tigre__1 {
+    order: 2;
+  }
 
-  .home__rating__2 {
-    margin: 0 0 0 20px;
-  }
-      
-  .home__rating__22 {
-    margin: 45px 0 0 20px;
-  }
-}
-
-@media (max-width: 1330px) {
-      
-  .home__rating__22 {
-    margin: 45px 0 0 30px;
-  }
-}
-
-@media (max-width: 1150px) {
-  
-  .home__rating__2 {
-    margin: 0 0 0 40px;
-  }
-      
-  .home__rating__22 {
-    margin: 45px 0 0 30px;
-  }
-}
-
-@media (max-width: 1500px) {
-      
-  .home__rating__22 {
-    margin: 45px 0 0 40px;
-  }
-}
-
-@media (max-width: 980px) {
-  
-  .home__rating__2 {
-    margin: 0 0 0 15px;
-  }
-      
-  .home__rating__22 {
-    margin: 45px 0 0 10px;
-  }
-}
-
-@media (max-width: 590px) {
-  
-  .home__rating__2 {
-    margin: 0 0 0 20px;
-  }
-      
-  .home__rating__22 {
-    margin: 45px 0 0 10px;
+  el__tigre__2 {
+    order: 1;
   }
 }
